tests/ui/impl-unused-tps.stderr
error[E0119]: conflicting implementations of trait `Foo<_>` for type `[isize; 0]`
  --> $DIR/impl-unused-tps.rs:27:1
   |
LL | impl<T> Foo<T> for [isize;0] {
   | ---------------------------- first implementation here
...
LL | impl<T,U> Foo<T> for U {
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[isize; 0]`

error[E0275]: overflow evaluating the requirement `([isize; 0], _): Sized`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`impl_unused_tps`)
note: required for `([isize; 0], _)` to implement `Bar`
  --> $DIR/impl-unused-tps.rs:31:11
   |
LL | impl<T,U> Bar for T {
   |      -    ^^^     ^
   |      |
   |      unsatisfied trait bound introduced here
   = note: 126 redundant requirements hidden
   = note: required for `([isize; 0], _)` to implement `Bar`

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:15:8
   |
LL | impl<T,U> Foo<T> for [isize;1] {
   |        ^ unconstrained type parameter
   |
   = note: to constrain `U`, use it in the implemented trait, in the self type, or in an equality with an associated type

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:31:8
   |
LL | impl<T,U> Bar for T {
   |        ^ unconstrained type parameter
   |
   = note: to constrain `U`, use it in the implemented trait, in the self type, or in an equality with an associated type

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:39:8
   |
LL | impl<T,U> Bar for T
   |        ^ unconstrained type parameter
   |
   = note: to constrain `U`, use it in the implemented trait, in the self type, or in an equality with an associated type
   = note: `U` is bound to an associated type, but the associated type is circularly defined in this impl

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:47:8
   |
LL | impl<T,U,V> Foo<T> for T
   |        ^ unconstrained type parameter
   |
   = note: to constrain `U`, use it in the implemented trait, in the self type, or in an equality with an associated type

error[E0207]: the type parameter `V` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:47:10
   |
LL | impl<T,U,V> Foo<T> for T
   |          ^ unconstrained type parameter
   |
   = note: to constrain `V`, use it in the implemented trait, in the self type, or in an equality with an associated type
   = note: `V` is bound to an associated type, but the reference to the associated type itself uses unconstrained generic parameters

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0119, E0207, E0275.
For more information about an error, try `rustc --explain E0119`.
